# valhalla

./: .gitignore  Cargo.toml  LICENSE  README.md  routes.md  valhall.db  valhall.toml
assets/css/: style.css
book/: book.toml
crates/valhall/: Cargo.toml  routes.md
crates/valhall-backend/: Cargo.toml
crates/valhall-config/: Cargo.toml
crates/valhall-docs/: Cargo.toml
crates/valhall-frontend/: Cargo.toml
crates/valhall-frontend/src/: crates.rs  index.rs  lib.rs
crates/valhall-index/: Cargo.toml
crates/valhall-index/src/: error.rs  git.rs  lib.rs  models.rs  tree.rs
crates/valhall-renderer/: Cargo.toml
crates/valhall-storage/: Cargo.toml
crates/valhall-storage/src/: lib.rs
crates/valhall/src/: app.rs  config.rs  error.rs  main.rs
crates/valhall/src/api/: mod.rs
crates/valhall/src/api/crates/: download.rs  mod.rs  new.rs  owners.rs  publish.rs  unyank.rs  yank.rs
crates/valhall/src/api/index/: mod.rs
crates/valhall/src/frontend/: account.rs  index.rs  mod.rs
crates/valhall/src/index/: mod.rs
crates/valhall/src/models/: mod.rs
crates/valhall/src/storage/: mod.rs
crates/valhall/templates/: index.html
crates/valhall/templates/account/: login.html  register.html
crates/valhall/templates/crates/: index.html
crates/valhall/templates/layouts/: base.html  footer.html  header.html
crates/valhall_audit/: Cargo.toml
crates/valhall_config/: Cargo.toml
crates/valhall_config/src/: lib.rs
crates/valhall_docs/: Cargo.toml
crates/valhall_docs/src/: builder.rs  cargo_metadata.rs  db.rs  details.rs  error.rs  lib.rs  main.rs  metadata.rs  util.rs
crates/valhall_index/: Cargo.toml
crates/valhall_index/src/: git.rs  lib.rs  sparse.rs  tree.rs
crates/valhall_models/: Cargo.toml
crates/valhall_models/src/: account.rs
crates/valhall_storage/: Cargo.toml
crates/valhall_storage/src/: lib.rs
migrations/: 20240927135344_initial.sql
src/: app.rs  auth.rs  db.rs  error.rs  lib.rs  main.rs  storage.rs
src/api/: error.rs  mod.rs
src/api/crates/: download.rs  info.rs  new.rs  owners.rs  unyank.rs  yank.rs
src/api/index/: mod.rs
src/auth/: backend.rs  mod.rs
src/db/: mod.rs
src/frontend/: account.rs  crates.rs  docs.rs  index.rs  mod.rs  search.rs
src/frontend/docs/: mod.rs  routes.rs  version.rs
src/index/: error.rs  git.rs  mod.rs  models.rs  sparse.rs  tree.rs
src/models/: account.rs  crates.rs  mod.rs
templates/: index.html  search.html
templates/account/: login.html
templates/crates/: index.html  versions.html
templates/layouts/: base.html  header.html
