[package]
name = "valhall"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = { version = "1.0", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1.40"
axum = { version = "0.7.6" }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "fs", "macros"] }
toml = "0.8.19"

tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.6.1", features = ["trace", "fs"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
http-body-util = "0.1.2"
anyhow = "1.0"
#hex = "0.4.3"
sha256 = "1.5.0"
pulldown-cmark = "0.12.1"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
bitflags = "2.6.0"
chrono = "0.4.38"
