[workspace]
members = [".", "crates/*"]
exclude = ["doc_build_dir/test_project-0.4.9"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
valhall_index = { path = "crates/valhall_index" }
valhall_storage = { path = "crates/valhall_storage" }
valhall_models = { path = "crates/valhall_models" }
valhall_config = { path = "crates/valhall_config" }
valhall_docs = { path = "crates/valhall_docs" }
valhall_audit = { path = "crates/valhall_audit" }
# valhall_frontend = { path = "crates/valhall_frontend" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.10"
semver = { version = "1.0", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
toml = "0.8.19"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }

[package]
name = "valhall"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
serde.workspace = true                                                         #={ version = "1.0", features = ["derive"] }
serde_json.workspace = true                                                    #= "1.0"
serde_with.workspace = true
sqlx.workspace = true
semver = { version = "1.0", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1.40"
axum = { version = "0.7.6" }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "fs", "macros"] }
toml = "0.8.19"
percent-encoding = "2.3.1"

tracing-subscriber.workspace = true                            #= { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.6.1", features = ["trace", "fs"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
http-body-util = "0.1.2"
anyhow = "1.0"
sha256 = "1.5.0"
pulldown-cmark = "0.12.1"
bitflags = "2.6.0"
chrono = "0.4.38"

valhall_index.workspace = true
valhall_storage.workspace = true
valhall_models.workspace = true
valhall_config.workspace = true
valhall_audit.workspace = true
