[package]
name = "valhall"
version.workspace = true
edition.workspace = true

[dependencies]
# valhall-docs = { workspace = true }
valhall-frontend.workspace = true
valhall-index.workspace = true
valhall-storage.workspace = true

serde.workspace = true
serde_json.workspace = true
semver.workspace = true
thiserror.workspace = true
hashbrown.workspace = true
tracing.workspace = true

axum = { version = "0.7.5" }
tokio = { version = "1.39.3", features = ["rt-multi-thread", "fs", "macros"] }
toml = "0.8.19"

tracing-subscriber = "0.3.18"
tower-http = { version = "0.5.2", features = ["trace", "fs"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
http-body-util = "0.1.2"
anyhow = "1.0.86"
